--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -17,6 +17,11 @@
         <title>{% block title %}Home{% endblock %}</title>
     </head>
     <body>
+        <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class = "navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </nav>
         <script
         src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
