--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,23 +28,35 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class = "navbar-nav">
+            {% if user.is_authenticated %}
+            <a class="nav-item nav-link" id="home" href="/">home</a>
+            <a class="nav-item nav-link" id="logout" href="/logout">logout</a>
+            {%else%}
             <a class="nav-item nav-link" id="login" href="/login">login</a>
             <a class="nav-item nav-link" id="signUp" href="/sign-up">sign up</a>
-            <a class="nav-item nav-link" id="logout" href="/logout">logout</a>
-            <a class="nav-item nav-link" id="home" href="/home">home</a>
+            {% endif %}
         </div>
       </div>
     </nav>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
-      {% for message in messages %}
-      <div class="'alert alert-danger alert-dismissable fade show" role="alert">
+      {% for category, message in messages %}
+      {% if category =='error' %}
+      <div class="alert alert-danger alert-dismissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      {% else %}
+      <div class="alert alert-success alert-dismissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %}
       {% endfor %}
     {% endif %}
     {% endwith %}
